--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 		<header class="tm-header">
 		<div class="tm-container">
-		<img src="C:\html\New folder\1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
