--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>assignment/satyajit</title>
-	<link rel="stylesheet" type="text/css" href="C:\html\contact.css">
+	<link rel="stylesheet" type="text/css" href="contact.css">
 </head>
-<body background="C:\html\New folder\contact.jpg">
+<body background="contact.jpg">
 	<header class="tm-header">
 		<div class="tm-container">
-		<img src="C:\html\New folder\1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
@@ -19,16 +19,16 @@
         </div>
 	</header>
 	<div class="logo">
-		<img src="C:\html\New folder\wp.png" width="150" height="150"><br><br>
+		<img src="wp.png" width="150" height="150"><br><br>
 		<div class="text">
 		<b>7735781107</b>
 	  	</div>
 	  	<br>
 	<a href="https://www.facebook.com/satyajit.behera.752487" >
-		<img src="C:\html\New folder\fb.png" width="100" height="100" class="fb">
+		<img src="fb.png" width="100" height="100" class="fb">
 	 </a>
 	<a href="https://www.instagram.com/satyajit_bablu_73/">
-		<img src="C:\html\New folder\insta.webp" width="100" height="100" class="insta">
+		<img src="insta.webp" width="100" height="100" class="insta">
 	</a>
 	</div>
 	<footer class="footer">
