--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>assignment/satyajit</title>
-	<link rel="stylesheet" type="text/css" href="C:\html\main.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<div class="background-wrap">
 		<video id=bg-video preload="auto" autoplay="true" loop="loop" muted="muted">
-			<source src="C:\html\New folder\bg.mp4" type="video/mp4">
+			<source src="bg.mp4" type="video/mp4">
 			</video>
 	</div>
 		<header class="tm-header">
@@ -28,7 +28,7 @@
 	<marquee behavior="alternate" scrollamount=15><h1><b>WELCOME !</b></h1></marquee>
 	</div>
 
-	<img src="C:\html\New folder\me.jpeg" class="image" alt="profile" width=250 height=250>
+	<img src="me.jpeg" class="image" alt="profile" width=250 height=250>
 
 	<div class="bio">
 		<h1 style="color: #42080D">HEY ! I AM SATYAJIT .</h1>
