--- a/INTEREST.html
+++ b/INTEREST.html
@@ -2,12 +2,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>assignment/satyajit</title>
-	<link rel="stylesheet" type="text/css" href="C:\html\interest.css">
+	<link rel="stylesheet" type="text/css" href="interest.css">
 </head>
-<body background="C:\html\New folder\hobby.jpg">
+<body background="hobby.jpg">
 	<header class="tm-header">
 		<div class="tm-container">
-		<img src="C:\html\New folder\1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
@@ -20,19 +20,19 @@
 	</header>
 	<div class="interest">
 	<div class="hobby">
-			<img src="C:\html\New folder\music.jpg" height="150" width="200" class="music" >
+			<img src="music.jpg" height="150" width="200" class="music" >
 			<p>
 				I like to learn piano cover of beutiful songs.
 			</p>
 	</div>	
 	<div class="hobby2">
-            <img src="C:\html\New folder\novel.jpg" height="150" width="200" class="novel">
+            <img src="novel.jpg" height="150" width="200" class="novel">
             <p>
             	I also love to read novels in my free time.
             </p>
 	</div>
     <div class="hobby3">
-    	<img src="C:\html\New folder\code.jpg" height="150" width="200" class="code">
+    	<img src="code.jpg" height="150" width="200" class="code">
     	<p>
     		I love to practice coding and web designing .
     	</p>
