--- a/achievement.html
+++ b/achievement.html
@@ -2,12 +2,12 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>assignment/satyajit</title>
-	<link rel="stylesheet" type="text/css" href="C:\html\achievement.css">
+	<link rel="stylesheet" type="text/css" href="achievement.css">
 </head>
-<body background="C:\html\New folder\achv.jpg">
+<body background="achv.jpg">
 	<header class="tm-header">
 		<div class="tm-container">
-		<img src="C:\html\New folder\1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
