--- a/INTEREST.html
+++ b/INTEREST.html
@@ -7,7 +7,7 @@
 <body background="hobby.jpg">
 	<header class="tm-header">
 		<div class="tm-container">
-		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.jpg" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
@@ -37,9 +37,7 @@
     		I love to practice coding and web designing .
     	</p>
     </div>
-    </div>
-    <footer class="footer">
-		          &copy; Copyright Satyajit 2020
-	</footer>
+   </div>
+    
 </body>
 </html>
