--- a/achievement.html
+++ b/achievement.html
@@ -7,7 +7,7 @@
 <body background="achv.jpg">
 	<header class="tm-header">
 		<div class="tm-container">
-		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.jpg" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
@@ -24,8 +24,6 @@
 
 		</p>
 	</div>
-	<footer class="footer">
-		          &copy; Copyright Satyajit 2020
-	</footer>
+	
 </body>
 </html>
