--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 		<header class="tm-header">
 		<div class="tm-container">
-		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.jpg" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
@@ -35,8 +35,5 @@
 		<p><h2>Hello guys . I am from Odisha . I am a 2nd year undergraduate student of Electrical Engineering Department at IIT Kharagpur . I am a boarder of Pandit Madan Mohan Malviya Hall of residence . I have succesfully completed my 1st Year.</h2>
 		</p>
 	</div>
-	<footer class="footer">
-		          &copy; Copyright Satyajit 2020
-	</footer>
 </body>
 </html>
