--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 <body background="contact.jpg">
 	<header class="tm-header">
 		<div class="tm-container">
-		<img src="1ST.JPG" alt="logo"  class="tm-logo"/>
+		<img src="1ST.jpg" alt="logo"  class="tm-logo"/>
 		<nav class="tm-nav">
 			<ul>
 				<li><a href="index.html"><h3>HOME</h3></a></li>
@@ -31,8 +31,6 @@
 		<img src="insta.webp" width="100" height="100" class="insta">
 	</a>
 	</div>
-	<footer class="footer">
-		          &copy; Copyright Satyajit 2020
-	</footer>
+	
 </body>
 </html>
